--- a/public/index.html
+++ b/public/index.html
@@ -1,36 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
+</html>
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wordle Argento 🧉</title>
+    <title>Wordle Argentino 🧉</title>
+    <!-- Enlace al archivo CSS externo -->
     <link rel="stylesheet" href="../src/css/styles.css">
+    <!-- Favicon para la página web -->
     <link rel="shortcut icon" href="../src/assets/argFlag-ico.png" type="image/x-icon">
+    <!-- Enlace a Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
     <div class="game-container">
         <div class="header">
-            <h1>Wordle Argento 🧉</h1>
+            <h1>Wordle Argentino 🧉</h1>
         </div>
-        <button id="theme-toggle" aria-label="Toggle dark/light mode">
+        <!-- Botón para cambiar entre modo oscuro/claro -->
+        <button id="theme-toggle" aria-label="Cambiar entre modo oscuro/claro">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-brilliance"
                 viewBox="0 0 16 16">
                 <path
                     d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16M1 8a7 7 0 0 0 7 7 3.5 3.5 0 1 0 0-7 3.5 3.5 0 1 1 0-7 7 7 0 0 0-7 7" />
             </svg>
         </button>
-        <div id="stats">
-            <p>Partidas Jugadas: <span id="games-played">0</span></p>
-            <p>Puntos: <span id="points">0</span></p>
+        <div class="stats-container">
+            <div id="stats">
+                <p>Partidas Jugadas: <span id="games-played">0</span></p>
+                <p>Puntos: <span id="points">0</span></p>
+            </div>
+            <!-- Botón para borrar puntos -->
+            <button id="delete-points-btn" aria-label="Borrar puntos">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z" />
+                    <path
+                        d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z" />
+                </svg>
+            </button>
         </div>
+        <!-- Contenedor del tablero de juego -->
         <div id="board"></div>
-        <div id="keyboard"></div>
+        <!-- Contenedor del teclado -->
+        <div id="keyboard-container">
+            <div id="keyboard"></div>
+        </div>
+        <!-- Botón para iniciar una nueva partida -->
         <button id="new-game-btn">Nueva Partida</button>
     </div>
-    <script src="../src/js/script.js"></script>
+    <!-- Enlace al archivo JavaScript externo -->
+    <script src="../src/js/main.js"></script>
+    <!-- Enlace a la biblioteca SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
