--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <title>Wordle Argentino 🧉</title>
     <!-- Enlace al archivo CSS externo -->
     <link rel="stylesheet" href="../src/css/styles.css">
-    <!-- Favicon para la página web -->
+    <!-- Favicon para la pagina web -->
     <link rel="shortcut icon" href="../src/assets/argFlag-ico.png" type="image/x-icon">
     <!-- Enlace a Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -20,7 +20,7 @@
         <div class="header">
             <h1>Wordle Argentino 🧉</h1>
         </div>
-        <!-- Botón para cambiar entre modo oscuro/claro -->
+        <!-- Boton para cambiar entre modo oscuro/claro -->
         <button id="theme-toggle" aria-label="Cambiar entre modo oscuro/claro">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-brilliance"
                 viewBox="0 0 16 16">
@@ -33,7 +33,7 @@
                 <p>Partidas Jugadas: <span id="games-played">0</span></p>
                 <p>Puntos: <span id="points">0</span></p>
             </div>
-            <!-- Botón para borrar puntos -->
+            <!-- Boton para borrar puntos -->
             <button id="delete-points-btn" aria-label="Borrar puntos">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash"
                     viewBox="0 0 16 16">
@@ -50,7 +50,7 @@
         <div id="keyboard-container">
             <div id="keyboard"></div>
         </div>
-        <!-- Botón para iniciar una nueva partida -->
+        <!-- Boton para iniciar una nueva partida -->
         <button id="new-game-btn">Nueva Partida</button>
     </div>
     <!-- Enlace al archivo JavaScript externo -->
