--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wordle Argentino 🧉</title>
     <!-- Enlace al archivo CSS externo -->
-    <link rel="stylesheet" href="../src/css/styles.css">
-    <!-- Favicon para la pagina web -->
-    <link rel="shortcut icon" href="../src/assets/argFlag-ico.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/styles.css">
     <!-- Enlace a Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
@@ -54,7 +52,7 @@
         <button id="new-game-btn">Nueva Partida</button>
     </div>
     <!-- Enlace al archivo JavaScript externo -->
-    <script src="../src/js/main.js"></script>
+    <script src="js/main.js"></script>
     <!-- Enlace a la biblioteca SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
